--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -1,3 +1,7 @@
+.team-empty-text {
+  color: #eceff4;
+}
+
 #powerstats {
   height: 100%;
   font-size: 70%;
@@ -10,15 +14,94 @@
 }
 
 #teamcard {
+  background-color: #4c566a;
+  color: #eceff4;
   transition: all 400ms ease-in-out;
 }
-
+.teamcard-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #teamcard:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
+  z-index: 3;
 }
 #heroPowerstats {
+  background-color: #eceff4;
+  color: #3b4252;
+}
+#team-powerstats {
+  background-color: #3b4252;
+  color: #eceff4;
+  border: #eceff4 solid 1px;
+}
+#team-powerstats > :first-child {
+  font-size: 1.4rem;
+  color: #479c57;
+}
+#team-powerstats-title {
+  color: #eceff4;
+}
+#team-avg {
+  background-color: #3b4252;
+  color: #eceff4;
+  border: #eceff4 solid 1px;
+}
+#team-bad-container {
+  border: #b65252 solid 2px;
+  border-radius: 5%;
+}
+#team-bad-title {
+  color: #b65252;
+}
+#team-good-container {
+  border: #479c57 solid 2px;
+  border-radius: 5%;
+}
+#team-good-title {
+  color: #479c57;
+}
+#heroPowerstats {
+  font-size: 0.6rem;
   z-index: 9;
 }
 #heroPowerstats i {
   font-size: 1.4rem;
+}
+
+/*MQ*/
+
+@media (max-width: 1200px) {
+  #heroPowerstats {
+    font-size: 0.5rem;
+  }
+  #heroPowerstats i {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 992px) {
+  .cont-powerstats {
+    order: 1 !important;
+  }
+  .cont-goodteam {
+    order: 2 !important;
+  }
+  .cont-badteam {
+    order: 3 !important;
+  }
+  #heroPowerstats {
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  #heroPowerstats i {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  #heroPowerstats {
+    font-size: 0.8rem;
+  }
 }
