--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ info light: #74c0fc
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
 
 body {
+  min-height: 100vh;
   background-image: linear-gradient(#3b4252, #191c24);
 }
 nav {
@@ -45,6 +46,19 @@ nav .btn:hover {
   margin: 0 auto;
   font-weight: 600;
   color: #e03131;
+  animation: fadeIn linear 500ms;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.login-label {
+  color: #eceff4;
 }
 
 #searchbar-text {
