--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,10 @@ nav .btn:hover {
 #searchbar-text {
   color: #eceff4;
 }
+
+/*MQ*/
+@media (max-width: 992px) {
+  #login-container {
+    width: 75% !important;
+  }
+}
