--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,8 @@ nav .btn:hover {
 }
 
 /*MQ*/
-@media (max-width: 992px) {
+@media (min-width: 992px) {
   #login-container {
-    width: 75% !important;
+    width: 25% !important;
   }
 }
